@@ -1,7 +1,7 @@
 Package: SemNeT
 Title: Methods and Measures for Semantic Network Analysis
 Version: 1.3.0
-Date: 2020-04-15
+Date: 2020-04-22
 Authors@R: c(person("Alexander P.", "Christensen", email = "alexpaulchristensen@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9798-7037")), person("Yoed N.", "Kenett", role = c("aut", "ctb"), comment = c(ORCID = "0000-0003-3872-7689")))
 Maintainer: Alexander P. Christensen <alexpaulchristensen@gmail.com>
 Description: Implements several functions for the analysis of semantic networks including different network estimation algorithms, partial node bootstrapping (Kenett, Anaki, & Faust, 2014 <doi:10.3389/fnhum.2014.00407>), random walk simulation (Kenett & Austerweil, 2016 <http://alab.psych.wisc.edu/papers/files/Kenett16CreativityRW.pdf>), and a function to compute global network measures. Significance tests and plotting features are also implemented. 
